# biei

./: .dockerignore  .gitignore  Cargo.toml  README.md  demo.sh  kustomization.yaml
.github/workflows/: biei-ci.yml  ci.yml  ishikari-ci.yml  stack-ci.yml
biei-sim/: Cargo.toml
biei-sim/src/: calibrated_costs.rs  calibration.rs  channel_transport.rs  chitchat_bus.rs  harness.rs  lib.rs  main.rs  metrics.rs  report.rs  scenarios.rs  stub_renderer.rs  workload.rs
biei/examples/: maplibre_smoke.rs
biei/src/: dispatcher.rs  membership.rs  metrics.rs  node.rs  options.rs  render_cache.rs  runtime.rs  server.rs  types.rs  wire.rs  worker.rs  worker_pool.rs
crates/: README.md
demo-deploy/: Dockerfile  README.md  check-hpa.sh  check-manifests.sh  cloudbuild.yaml
deploy/: README.md
integration/: README.md  check-stack-manifests.sh
ishikari/: Cargo.toml
ishikari-sim/: Cargo.toml
ishikari-sim/src/: churn.rs  cluster.rs  main.rs  modeled.rs  report.rs
ishikari/src/: config.rs  lib.rs  main.rs  metrics.rs  singleflight.rs
issues/: README.md  auth-todo.md  biei-todo.md  ishikari-todo.md  mln-rs-wishlist.md  refactor.md
scripts/: dev-cluster.sh
servers/ishikari/: README.md
services/biei/: .gitignore
services/ishikari/: Cargo.toml  README.md
services/ishikari/ishikari-terrain/: Cargo.toml
spec/: production-spec.md  simulator-spec.md
specs/: README.md  auth-sketch.md  biei-spec.md  ishikari-sim-spec.md  ishikari-spec.md  resource-layout-sketch.md  simulator-spec.md
src/: config.rs  main.rs
src/pmtiles/: format.rs
src/server/: mod.rs
(+84 files in other folders)
