[package]
name = "ishikari-terrain"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "DEM decoding and derived contour and hillshade tile generation"
repository = "https://github.com/MIERUNE/ishikari"

[dependencies]
anyhow.workspace = true
fast-mvt.workspace = true
image.workspace = true
tracing.workspace = true
webp.workspace = true
